_sass/luique/basic.scss
/* ... */
.m-video-large .video .img {
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	z-index: 2;
	cursor: pointer;
}

.m-video-large .video .play {
	margin: -59px 0 0 -59px;
	content: '';
	position: absolute;
	left: 50%;
	top: 50%;
	width: 118px;
	height: 118px;
	background: #18181b url(../images/circle.svg) no-repeat center center;
	background-size: 20px 20px;
	border: none;
	z-index: 3;
	border-radius: 100%;
	-moz-border-radius: 100%;
	-webkit-border-radius: 100%;
	-khtml-border-radius: 100%;
	cursor: pointer;
}

.m-video-large .video.active .img {
	display: none;
}

.m-video-large .video.active .play {
	display: none;
}


/**
* Section Navigation
**/

.m-page-navigation, .section.section-inner.m-page-navigation {
	padding: 120px 0;
	background: transparent;
	border-top: 1px solid rgba(0,0,0,0.1);
}

.m-page-navigation a {
	text-decoration: none;
}

.m-page-navigation a:hover .h-title {
	color: #29a587;
}

.m-page-navigation .nav-arrow {
	margin-bottom: 30px;
	position: relative;
	display: block;
	font-size: 14px;
	line-height: 20px;
	color: #000;
	font-weight: 700;
	text-transform: uppercase;
	letter-spacing: 0.05em;
}

.m-page-navigation .nav-arrow:after {
	content: '';
	margin-left: 10px;
	position: relative;
	display: inline-block;
	vertical-align: top;
	left: 0;
	top: 0;
	width: 12px;
	height: 20px;
	background: url(../images/arrow.svg) no-repeat;
	background-size: contain;
	opacity: 0.7;
	filter: invert(1);
}

@media screen and (min-width: 1025px) {
	.m-page-navigation .h-title {
		font-size: 74px;
		line-height: 1.2;
	}
}


.single-portfolio .m-page-navigation .col-xs-12 {
	margin-left: 0!important;
}


/**
* Section Archive
**/

.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
	-ms-word-wrap: break-word;
	word-wrap: break-word;
}

.post-content p+.wp-block-gallery {
	margin-top: 1rem;
}

.elementor-default .wp-block-gallery {
	margin: -10px;
}

.elementor-default .wp-block-gallery .wp-block-image {
	padding: 10px;
}

.post-content table {
	width: 100%;
	margin: 2rem 0;
	padding: 0;
	border-collapse: collapse;
}

.wp-block-categories-dropdown, .wp-block-archives-dropdown {
	max-width: 300px;
}

.post-content table th,
.wp-block-table.is-style-stripes th {
	font-weight: 300;
	padding: 15px 20px;
	text-align: left;
	background: none;
	border: 1px solid #999;
	text-transform: none;
	font-size: 1rem;
}

.post-content table tbody th,
.wp-block-table.is-style-stripes tbody th {
	background: none;
	border: 1px solid #999;
	text-transform: none;
	font-size: 1rem;
}

.post-content table td,
.wp-block-table.is-style-stripes td {
	padding: 10px 20px;
	border: 1px solid #999;
	background: none;
	font-size: 1rem;
	color: #000;
}

.post-content figure {
	max-width: 100%;
	height: auto;
}

.post-content p img,
.post-content figure img {
	max-width: 100%;
	height: auto;
}

img.alignright {
	float: right;
	margin: 0 0 15px 30px;
}

img.alignleft {
	float: left;
	margin: 0 30px 15px 0;
}

img.aligncenter,
.aligncenter {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

img .alignnone,
.alignnone {
	float: none;
}

.wp-caption-text,
.wp-block-image figcaption,
.wp-block-video figcaption,
.wp-block-embed figcaption,
.blocks-gallery-caption {
	max-width: 100%;
	margin: 0;
	padding: 5px 10px 0 10px;
	text-align: center;
	font-size: 0.9em;
	line-height: 1.4;
	font-style: italic;
}

.blocks-gallery-caption {
	margin-bottom: 1rem!important;
	padding-top: 0;
	width: 100%;
	display: block;
}

.wp-caption.alignnone {
	margin: 5px 0 0 0;
}

.wp-caption.alignleft {
	margin: 5px 30px 0 0;
}

.wp-caption.alignright {
	margin: 5px 0 0 30px;
}

.news__paragraph_clear:after,
.post-content:after {
	content: '';
	position: relative;
	display: block;
	clear: both;
}

pre {
	font-style: italic;
}

pre code {
	color: #d63384;
	font-style: italic;
}

.wp-block-table.is-style-stripes tbody tr:nth-child(odd) {
	background: none;
}

.wp-block-table.is-style-stripes {
	border-bottom: none;
	border-collapse: collapse;
}

.post-content figure, .post-content figure {
	margin-top: 0;
	margin-bottom: 30px;
}

.post-content ol,
.post-content ul {
	color: #000;
}

.post-content ol ol,
.post-content ul ul,
.post-content ol ul,
.post-content ul ol {
	margin-top: 0;
	margin-bottom: 0;
}

.pager {
	position: relative;
	z-index: 2;
	margin: 0;
	padding: 0;
	display: -ms-flexbox;
	display: -webkit-box;
	display: flex;
	list-style: none;
	-webkit-box-pack: center;
	justify-content: center;
	-ms-flex-pack: center;
	text-align: center;
	clear: both;
}

.page-links {
	margin: 30px 0;
}

a.page-numbers,
.page-numbers,
.post-page-numbers {
	margin: 0 6px;
	padding: 0;
	position: relative;
	display: inline-block;
	vertical-align: middle;
	background-color: transparent;
	font-size: 16px;
	width: 42px;
	height: 42px;
	line-height: 42px;
	color: #000;
	font-weight: 700;
	text-align: center;
	text-decoration: none;
	border-radius: 6px;
	-webkit-border-radius: 6px;
}

a.page-numbers.prev i {
	transform: scaleX(-1);
	-webkit-transform: scaleX(-1);
}

a.page-numbers.prev .icon-arrow,
a.page-numbers.next .icon-arrow {
	margin-top: -1px;
	position: absolute;
	top: 50%;
	right: 0;
	width: 15px;
	height: 2px;
}

a.page-numbers.prev .icon-arrow:before,
a.page-numbers.prev .icon-arrow:after,
a.page-numbers.next .icon-arrow:before,
a.page-numbers.next .icon-arrow:after {
	content: '';
	position: absolute;
	top: -3px;
	right: 0;
	width: 12px;
	height: 1px;
	background: #000;
	-ms-transform: rotate(40deg);
	transform: rotate(40deg);
	-webkit-transform: rotate(40deg);
	-moz-transform: rotate(40deg);
	-o-transform: rotate(40deg);
}

a.page-numbers.prev .icon-arrow:after,
a.page-numbers.next .icon-arrow:after {
	top: auto;
	bottom: -3px;
	-ms-transform: rotate(-40deg);
	transform: rotate(-40deg);
	-webkit-transform: rotate(-40deg);
	-moz-transform: rotate(-40deg);
	-o-transform: rotate(-40deg);
}
/* ... */

